udpkg (0.025) UNRELEASED; urgency=low

  * Bastian Blank
    - Remove autogenerated files.
    - Update autoconf files.
  * Colin Watson
    - dpkg_doconfigure returns di_exec_mangle_status of the postinst rather
      than just WEXITSTATUS, so that a segfaulting postinst doesn't send
      main-menu into an infinite loop.

 -- Bastian Blank <waldi@debian.org>  Sun, 11 Apr 2004 10:32:10 +0200

udpkg (0.024) unstable; urgency=low

  * Use /var/lib/dpkg/status, not /var/lib/dpkg/status.udeb.

 -- Joey Hess <joeyh@debian.org>  Mon, 22 Mar 2004 16:02:25 -0500

udpkg (0.023) unstable; urgency=low

  * Call trimtemplates (from lowmem) on templates files before loading.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 16:00:38 -0500

udpkg (0.022) unstable; urgency=low

  * Delete templates files after calling debconf-loadtemplates, to save space.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 15:11:30 -0500

udpkg (0.021) unstable; urgency=low

  * Update to debhelper v4 and use debhelper's udeb support.

 -- Joey Hess <joeyh@debian.org>  Mon,  9 Feb 2004 19:25:10 -0500

udpkg (0.020) unstable; urgency=low

  * Petter Reinholdtsen
    - Report arch 'sparc' instead of 'sparc64' on UltraSparc.
      Patch from Thomas Poindessous. (Closes: #227851)
  * Bastian Blank
    - Remove runtime detection of debian architecture.

 -- Bastian Blank <waldi@debian.org>  Sat, 24 Jan 2004 18:57:24 +0100

udpkg (0.019) unstable; urgency=low

  * Thiemo Seufer
    - Add CFLAGS for warnings and space optimization.
  * Joey Hess
    - Use architecture "powerpc" for ppc64, patch from Anton Blanchard.

 -- Joey Hess <joeyh@debian.org>  Mon, 22 Dec 2003 14:41:14 -0500

udpkg (0.018) unstable; urgency=low

  * Don't use di_exec_shell_log for -f, because it has undefined behvaior
    that does not include printing out what dpkg is supported to print
    out. This should un-break the floppy retreiver.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 02:24:46 -0500
