@@ -7,6 +7,11 @@ udpkg (0.025) UNRELEASED; urgency=low
     - dpkg_doconfigure returns di_exec_mangle_status of the postinst rather
       than just WEXITSTATUS, so that a segfaulting postinst doesn't send
       main-menu into an infinite loop.
+  * Thiemo Seufer
+    - Don't generate useless Makefile targets, fix package name, require
+      modern automake versions in configure.ac.
+    - Replace asprintf with snprintf, system with di_exec_shell_log in
+      udpkg.c. Formatting fixes.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 11 Apr 2004 10:32:10 +0200
 
